--- a/siteGen/_config.yml
+++ b/siteGen/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://gcl-rendering.github.io/Awesome-Rendering-Papers
 permalink: :title/
 permalink_defaults:
 pretty_urls:
