--- a/paperSources/SIGGRAPH.yml
+++ b/paperSources/SIGGRAPH.yml
@@ -4,5 +4,6 @@ sourceInfo:
   name: SIGGRAPH
   fullname: ACM SIGGRAPH
 papers:
-
+  2021:
+    - name: 'Vectorization for Fast, Analytic, and Differentiable Visibility'
   
