--- a/hierarchy.yml
+++ b/hierarchy.yml
@@ -1,39 +1,44 @@
 # The rendering hierarchy
 
 rootHierarchy:
-  name: The Rendering Hierarchy
+  name: The Graphics Hierarchy
   children:
-    - name: Postprocessing
+    - name: Rendering
       children:
-        - name: Anti-aliasing
-        - name: Super-sampling
-        - name: Denoising
-        - name: Tonemapping
-        - name: Others
-    - name: Rendering methods
-      children:
-        - name: Rasterization
+        - name: Postprocessing
           children:
-          - name: Global Illumination
-          - name: Ambient Occulusion
-          - name: Reflection
-          - name: Indirect lighting
-        - name: Ray tracing
-        - name: Radiosity
-        - name: Photon mapping
-        - name: End-to-end Neural Rendering
+            - name: Anti-aliasing
+            - name: Super-sampling
+            - name: Denoising
+            - name: Tonemapping
+            - name: Others
+        - name: Rendering methods
           children:
-          - name: NeRF
-    - name: Scene Representation
-      children:
-        - name: Geometry
-        - name: Material
-        - name: Light
-        - name: Camera
-    - name: Scene Management
-      children:
-        - name: Acceleration structure
-    - name: Differentiable Rendering
+            - name: Rasterization
+              children:
+              - name: Global Illumination
+              - name: Ambient Occulusion
+              - name: Reflection
+              - name: Indirect lighting
+            - name: Ray tracing
+            - name: Radiosity
+            - name: Photon mapping
+            - name: End-to-end Neural Rendering
+              children:
+              - name: NeRF
+        - name: Scene Representation
+          children:
+            - name: Geometry
+            - name: Material
+            - name: Light
+            - name: Camera
+        - name: Scene Management
+          children:
+            - name: Acceleration structure
+        - name: Differentiable Rendering
+    - name: Geometry
+    - name: CAD-CAGD
+    - name: Simulation
 
 # auxHierarchy:
 # - name: 
