--- a/paperSources/SIGGRAPH-Asia.yml
+++ b/paperSources/SIGGRAPH-Asia.yml
@@ -22,6 +22,7 @@ papers:
   - name: 'FDNeRF: Few-shot Dynamic Neural Radiance Fields for Face Reconstruction and Expression Editing'
   - name: 'Marginal multiple importance sampling'
   - name: 'Unbiased Caustics Rendering Guided by Representative Specular Paths'
+  - name: 'SHRED: 3D Shape Region Decomposition with Learned Local Operations'
   2021:
   - name: 'Monte Carlo Denoising via Auxiliary Feature Guided Self-Attention'
   - name: 'NeRFactor: Neural Factorization of Shape and Reflectance Under an Unknown Illumination'
