Add SIGGRAPH-Asia 2022 paper 'Isometric Energies for Recovering Injectivity in Constrained Mapping'

--- a/hierarchy.yml
+++ b/hierarchy.yml
@@ -39,6 +39,7 @@ rootHierarchy:
     - name: Geometry
       children:
         - name: Decomposition
+        - name: Parameterization
     - name: CAD-CAGD
     - name: Simulation
 
