--- a/paperSources/SIGGRAPH-Asia.yml
+++ b/paperSources/SIGGRAPH-Asia.yml
@@ -23,6 +23,7 @@ papers:
   - name: 'Marginal multiple importance sampling'
   - name: 'Unbiased Caustics Rendering Guided by Representative Specular Paths'
   - name: 'SHRED: 3D Shape Region Decomposition with Learned Local Operations'
+  - name: 'Isometric Energies for Recovering Injectivity in Constrained Mapping'
   2021:
   - name: 'Monte Carlo Denoising via Auxiliary Feature Guided Self-Attention'
   - name: 'NeRFactor: Neural Factorization of Shape and Reflectance Under an Unknown Illumination'
