Simulation and Animation 2023/02/25
Add SIGGRAPH 2019 paper 'PuppetMaster: robotic animation of marionettes'.

--- a/paperSources/SIGGRAPH.yml
+++ b/paperSources/SIGGRAPH.yml
@@ -4,6 +4,8 @@ sourceInfo:
   name: SIGGRAPH
   fullname: ACM SIGGRAPH
 papers:
+  2019:
+    - name: 'PuppetMaster: robotic animation of marionettes'
   2021:
     - name: 'Vectorization for Fast, Analytic, and Differentiable Visibility'
   
