--- a/hierarchy.yml
+++ b/hierarchy.yml
@@ -41,6 +41,8 @@ rootHierarchy:
         - name: Decomposition
     - name: CAD-CAGD
     - name: Simulation
+      children:
+        - name: Seneitivity Analysis
 
 # auxHierarchy:
 # - name: 
