--- a/hierarchy.yml
+++ b/hierarchy.yml
@@ -42,7 +42,8 @@ rootHierarchy:
     - name: CAD-CAGD
     - name: Simulation
       children:
-        - name: Seneitivity Analysis
+        - name: Sensitivity Analysis
+        - name: Robotics
 
 # auxHierarchy:
 # - name: 
