--- a/hierarchy.yml
+++ b/hierarchy.yml
@@ -14,16 +14,16 @@ rootHierarchy:
       children:
         - name: Rasterization
           children:
-          - name: Global Illumination
-          - name: Ambient Occulusion
-          - name: Reflection
-          - name: Indirect lighting
+            - name: Global Illumination
+            - name: Ambient Occulusion
+            - name: Reflection
+            - name: Indirect lighting
         - name: Ray tracing
         - name: Radiosity
         - name: Photon mapping
         - name: End-to-end Neural Rendering
           children:
-          - name: NeRF
+            - name: NeRF
     - name: Scene Representation
       children:
         - name: Geometry
@@ -34,7 +34,7 @@ rootHierarchy:
       children:
         - name: Acceleration structure
     - name: Differentiable Rendering
-
+    - name: Rendering System
 # auxHierarchy:
-# - name: 
+# - name:
 
