--- a/hierarchy.yml
+++ b/hierarchy.yml
@@ -49,5 +49,8 @@ rootHierarchy:
         - name: Differentiable Simulation 
         - name: Robotics
         - name: Particle-based Method 
+        - name: Learning-based Simulation
+        - name: Fluid Simulation
+        - name: Position Based Dynamics
 # auxHierarchy:
 # - name:
