Add new tag & SSCO paper

--- a/hierarchy.yml
+++ b/hierarchy.yml
@@ -52,5 +52,6 @@ rootHierarchy:
         - name: Learning-based Simulation
         - name: Fluid Simulation
         - name: Position Based Dynamics
+    - name: Graphics DSL & Tools
 # auxHierarchy:
 # - name:
