--- a/paperSources/TOG.yml
+++ b/paperSources/TOG.yml
@@ -6,5 +6,6 @@ sourceInfo:
   fullname: ACM Transactions on Graphics
 papers:
   2022:
-    - name: 'Position-Based Surface Tension Flow'
-    - name: 'Sparsity-Specific Code Optimization using Expression Trees'
+    - name: "Position-Based Surface Tension Flow"
+    - name: "Sparsity-Specific Code Optimization using Expression Trees"
+    - name: "Depth of Field Aware Differentiable Rendering"
