--- a/paperSources/SIGGRAPH.yml
+++ b/paperSources/SIGGRAPH.yml
@@ -4,8 +4,14 @@ sourceInfo:
   name: SIGGRAPH
   fullname: ACM SIGGRAPH
 papers:
+  2013:
+    - name: 'A material point method for snow simulation'
+  2016:
+    - name: 'Drucker-prager elastoplasticity for sand animation'
   2019:
     - name: 'PuppetMaster: robotic animation of marionettes'
   2021:
     - name: 'Vectorization for Fast, Analytic, and Differentiable Visibility'
+  2022:
+    - name: 'Energetically consistent inelasticity for optimization time integration'
   
