--- a/hierarchy.yml
+++ b/hierarchy.yml
@@ -53,6 +53,9 @@ rootHierarchy:
         - name: Learning-based Simulation
         - name: Fluid Simulation
         - name: Position Based Dynamics
+        - name: Material Point Method
+        - name: Finite Element Method
+        - name: Plasticity Simulation
     - name: DSL-Tools
 # auxHierarchy:
 # - name:
