--- a/paperSources/SIGGRAPH-Asia.yml
+++ b/paperSources/SIGGRAPH-Asia.yml
@@ -26,6 +26,7 @@ papers:
   - name: 'Isometric Energies for Recovering Injectivity in Constrained Mapping'
   - name: 'Deep Adaptive Sampling and Reconstruction using Analytic Distributions'
   - name: 'Motion Guided Deep Dynamic 3D Garments'
+  - name: 'LuisaRender: A High-Performance Rendering Framework with Layered and Unified Interfaces on Stream Architectures'
   2021:
   - name: 'Monte Carlo Denoising via Auxiliary Feature Guided Self-Attention'
   - name: 'NeRFactor: Neural Factorization of Shape and Reflectance Under an Unknown Illumination'
