Add (2023 sig) Contact Proxy for FSI

--- a/hierarchy.yml
+++ b/hierarchy.yml
@@ -50,6 +50,8 @@ rootHierarchy:
         - name: Differentiable Simulation 
         - name: Robotics
         - name: Particle-based Method 
+        - name: Smoothed Particle Hydrodynamics
+        - name: Fluid-Solid Coupling
         - name: Learning-based Simulation
         - name: Fluid Simulation
         - name: Position Based Dynamics
