--- a/paperSources/SIGGRAPH.yml
+++ b/paperSources/SIGGRAPH.yml
@@ -16,3 +16,4 @@ papers:
     - name: 'Energetically Consistent Inelasticity for Optimization Time Integration'
   2023:
     - name: 'A Contact Proxy Splitting Method for Lagrangian Solid-Fluid Coupling'
+    - name: 'Neural Partitioning Pyramids for Denoising Monte Carlo Renderings'
