--- a/hierarchy.yml
+++ b/hierarchy.yml
@@ -59,6 +59,7 @@ rootHierarchy:
         - name: Finite Element Method
         - name: Plasticity Simulation
         - name: Topology Optimization
+        - name: Structure Design
     - name: DSL-Tools
 # auxHierarchy:
 # - name:
