--- a/paperSources/SIGGRAPH.yml
+++ b/paperSources/SIGGRAPH.yml
@@ -17,3 +17,4 @@ papers:
   2023:
     - name: 'A Contact Proxy Splitting Method for Lagrangian Solid-Fluid Coupling'
     - name: 'Neural Partitioning Pyramids for Denoising Monte Carlo Renderings'
+    - name: 'Differentiable Stripe Patterns for Inverse Design of Structured Surfaces'
